fix encoding and update